# infinite-permutations

./: Main.hs  README.md  infinite.cabal
