name:                infinite
version:             0.1.0.0
synopsis:            Generate permutations of "INFINITE" with constraints
description:         Please see README.md
homepage:            https://github.com/devonhollowood/infinite-permutations#readme
license:             GPL-3
license-file:        LICENSE
author:              Devon Hollowood
maintainer:          devonhollowood@github.com
copyright:           2016 Devon Hollowood
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable infinite
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , multiset-comb
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/devonhollowood/infinite-permutations
